@@ -19,6 +19,10 @@
         \item New function \code{na_omit} based on the stack overflow thread
         http://stackoverflow.com/questions/15953768/templated-rcpp-function-to-erase-na-values
     }
+    \item Portability
+    \itemize{
+        \item Fix (from Martyn Plummer) for solaris in handling SingleLogicalResult.     
+    }
 }
 
 \section{Changes in Rcpp version 0.10.3 (2013-03-23)}{
