@@ -2,7 +2,9 @@
 
         * include/Rcpp/sugar/functions/na_omit.h : new function na_omit to remove
         missing values from a vector. 
-
+        * src/attributes.cpp : portability fix (from Martyn Plummer)
+        * include/Rcpp/api/meat/Vector.h : portability fix (from Martyn Plummer)
+        
 2013-04-14  Romain Francois <romain@r-enthusiasts.com>
 
         * include/Rcpp/traits/is_na.h: complex version did not work. 
